feat: add monthly budget support
